--- a/setup.html
+++ b/setup.html
@@ -49,17 +49,17 @@
         <h2>2. Modelo principal</h2>
         <label for="model">Modelo de chat</label>
         <select id="model">
-          <option value="meta-llama/llama-3.3-70b-versatile">llama-3.3-70b-versatile (más inteligente, gratis)</option>
-          <option value="meta-llama/llama-4-scout-17b-16e-instruct">llama-4-scout-17b (rápido, gratis)</option>
-          <option value="meta-llama/llama-3.1-8b-instruct">llama-3.1-8b-instruct (ultra rápido, gratis)</option>
-          <option value="qwen/qwen3-32b">qwen3-32b (gratis, 500K tok/día)</option>
-          <option value="moonshotai/kimi-k2-instruct">kimi-k2-instruct (gratis)</option>
+          <option value="meta-llama/llama-3.3-70b-instruct">llama-3.3-70b-instruct (recomendado, gratis)</option>
+          <option value="meta-llama/llama-3.1-8b-instruct">llama-3.1-8b-instruct (rápido, gratis)</option>
+          <option value="qwen/qwen3-32b">qwen3-32b (gratis)</option>
+          <option value="google/gemma-3-27b-it">gemma-3-27b-it (gratis)</option>
+          <option value="mistralai/mistral-7b-instruct">mistral-7b-instruct (gratis)</option>
         </select>
 
         <label for="fallback">Modelo fallback</label>
         <select id="fallback">
-          <option value="meta-llama/llama-3.1-8b-instruct">llama-3.1-8b-instruct (ultra rápido)</option>
-          <option value="qwen/qwen3-32b">qwen3-32b</option>
+          <option value="meta-llama/llama-3.1-8b-instruct">llama-3.1-8b-instruct (rápido)</option>
+          <option value="mistralai/mistral-7b-instruct">mistral-7b-instruct</option>
           <option value="">Sin fallback</option>
         </select>
       </div>
